--- a/index.html
+++ b/index.html
@@ -31,7 +31,22 @@
         </div>
     </header>
     <main>
-
+        <!-- features section start -->
+        <section class="teams_container">
+            <div class="teams_images_container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams_content">
+                <p class="teams_title"><span class="quick_list">Quick list</span><span class="of_our"> of Our</span><span class="text_features"> Features</span></p>
+                <p class="teams_description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn_primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
