--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div class="banner_content">
                 <h1 class="banner_title">Brand New Group of Architects</h1>
-                <p class="banner_description">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     lookeven</p>
                 <button class="btn_primary">Explore More</button>
@@ -41,7 +41,7 @@
             </div>
             <div class="teams_content">
                 <p class="teams_title"><span class="quick_list">Quick list</span><span class="of_our"> of Our</span><span class="text_features"> Features</span></p>
-                <p class="teams_description">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn_primary">Explore More</button>
