started facts section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <h3 class="nav_title">G3 Architects</h3>
+            <h3 class="primary_title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -25,7 +25,7 @@
                 <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     lookeven</p>
-                <button class="btn_primary">Explore More</button>
+                <button class="primary_btn">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
         </div>
@@ -40,12 +40,23 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams_content">
-                <p class="teams_title"><span class="quick_list">Quick list</span><span class="of_our"> of Our</span><span class="text_features"> Features</span></p>
+                <p class="teams_title"><span class="quick_list">Quick list</span><span class="of_our"> of
+                        Our</span><span class="text_features"> Features</span></p>
                 <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
-                <button class="btn_primary">Explore More</button>
+                <button class="primary_btn">Explore More</button>
             </div>
+        </section>
+        <!-- Features section start -->
+        <section class="features_container">
+
+        </section>
+        <!-- Facts section start -->
+        <section class="facts_container">
+            <h3 class="primary_title">Some Facts</h3>
+            <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.</p>
         </section>
     </main>
     <footer>
