finish facts section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,30 @@
         <!-- Facts section start -->
         <section class="facts_container">
             <h3 class="primary_title">Some Facts</h3>
-            <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration.</p>
+            <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but
+                themajority have sufferedalteration.</p>
+            <div class="facts_card_container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <H2 class="card_srats">54</H2>
+                    <p class="card_title">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <H2 class="card_srats">1458</H2>
+                    <p class="card_title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <H2 class="card_srats">590</H2>
+                    <p class="card_title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <H2 class="card_srats">22578</H2>
+                    <p class="card_title">Email Send</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
