added sponsor section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
                     <p class="card_title">Email Send</p>
                 </div>
             </div>
+            <!-- Sponsors section -->
+            <section class="sponsor_container">
+                <h3 class="primary_title">Our Sponspors</h3>
+                <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+                <div class="sponsors_images_container">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+            </section>
         </section>
     </main>
     <footer>
