--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="banner">
             <div class="banner_content">
-                <h1 class="banner_title">Brand New Group of Architects</h1>
+                <h1 class="banner_title">Brand New <br> Group of Architects</h1>
                 <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     lookeven</p>
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <!-- features section start -->
+        <!-- Teams section start -->
         <section class="teams_container">
             <div class="teams_images_container">
                 <img src="images/team1.png" alt="">
@@ -50,7 +50,43 @@
         </section>
         <!-- Features section start -->
         <section class="features_container">
-
+            <div class="features_content">
+                <h3 class="primary_title" id="features_title">Features you will <br>love & enjoy</h3>
+                <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <div class="features_card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="features_card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="features_card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="features_card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="primary_description">There are many variations of passages of Lorem Ipsum available, but
+                        the majority have suffered alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+            <div class="fretures_image">
+                <img src="images/architect.png" alt="">
+                <div class="ten_years_badge">
+                    <h2>10+Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- Facts section start -->
         <section class="facts_container">
