finish responsive footer and website

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </p>
                 </div>
             </div>
-            <div class="fretures_image">
+            <div class="features_image">
                 <img src="images/architect.png" alt="">
                 <div class="ten_years_badge">
                     <h2>10+Year</h2>
@@ -132,7 +132,9 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer_container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
